fix https://mindfront.fogbugz.com/f/cases/113/Mobile-navbar-collapse-doesn-t-scroll

--- a/bootstrap/Collapse.sass
+++ b/bootstrap/Collapse.sass
@@ -7,6 +7,3 @@
 .collapse.open .collapse-arrow,
 .collapsing.open .collapse-arrow
   transform: rotate(90deg)
-
-.collapse.in
-  overflow: initial
